# ubuntu-server-playbook

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .release-please-config.json  CHANGELOG.md  LICENSE  main.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/: renovate.json
.github/workflows/: release.yml
