[project]
name = "ubuntu-server-playbook"
version = "0.1.0"
description = "An Ansible Playbook for deploying a personal Ubuntu server"
readme = "README.md"
authors = [
    { name = "Rowan Gillson", email = "devops@the.bald.engineer" }
]
requires-python = ">=3.13"
license = "MIT"
dependencies = [
    "ansible>=12.2.0",
]

[dependency-groups]
dev = [
    "ansible-creator>=25.10.0",
    "commitizen>=4.10.0",
    "mkdocs-material>=9.6.23",
    "pre-commit>=4.4.0",
]
lint = [
    "ansible-lint>=25.9.2",
]

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
tag_format = "v$version"
version_scheme = "semver"
version_provider = "uv"
annotated_tag = true
version_files = [
    "pyproject.toml:version",
]
